// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adds all types of entities correctly 1`] = `
Object {
  "channels": Array [
    Object {
      "id": "channel_0",
      "instrumentId": "instrument_0",
      "slotIds": Array [
        "slot_0",
      ],
      "type": "instrumentChannel",
    },
  ],
  "clips": Array [
    Object {
      "duration": 10,
      "id": "clip_0",
      "notes": Array [],
      "type": "noteClip",
    },
  ],
  "instruments": Array [
    Object {
      "id": "instrument_0",
      "type": "samplerInstrument",
    },
  ],
  "samples": Array [],
  "scenes": Array [
    Object {
      "eventActions": Object {
        "enter": Array [
          Object {
            "slotIds": Array [
              "slot_0",
            ],
            "type": "playSlots",
          },
        ],
      },
      "id": "scene_0",
    },
  ],
  "slots": Array [
    Object {
      "id": "slot_0",
      "loops": 0,
      "timelineId": "timeline_0",
      "type": "timelineSlot",
    },
  ],
  "timelines": Array [
    Object {
      "clips": Array [
        Object {
          "clipId": "clip_0",
          "end": 4,
          "start": 0,
        },
      ],
      "duration": 4,
      "id": "timeline_0",
      "name": "Timeline Name",
    },
  ],
}
`;

exports[`adds all types of entities correctly 2`] = `
Object {
  "channels": Array [
    Object {
      "id": "channel_0",
      "instrumentId": "instrument_0",
      "slotIds": Array [
        "slot_0",
      ],
      "type": "instrumentChannel",
    },
    Object {
      "id": "channel_1",
      "instrumentId": "instrument_1",
      "slotIds": Array [
        "slot_1",
      ],
      "type": "instrumentChannel",
    },
  ],
  "clips": Array [
    Object {
      "duration": 10,
      "id": "clip_0",
      "notes": Array [],
      "type": "noteClip",
    },
    Object {
      "duration": 10,
      "id": "clip_1",
      "notes": Array [],
      "type": "noteClip",
    },
  ],
  "instruments": Array [
    Object {
      "id": "instrument_0",
      "type": "samplerInstrument",
    },
    Object {
      "id": "instrument_1",
      "type": "samplerInstrument",
    },
  ],
  "samples": Array [],
  "scenes": Array [
    Object {
      "eventActions": Object {
        "enter": Array [
          Object {
            "slotIds": Array [
              "slot_0",
            ],
            "type": "playSlots",
          },
        ],
      },
      "id": "scene_0",
    },
    Object {
      "eventActions": Object {
        "enter": Array [
          Object {
            "slotIds": Array [
              "slot_1",
            ],
            "type": "playSlots",
          },
        ],
      },
      "id": "scene_1",
    },
  ],
  "slots": Array [
    Object {
      "id": "slot_0",
      "loops": 0,
      "timelineId": "timeline_0",
      "type": "timelineSlot",
    },
    Object {
      "id": "slot_1",
      "loops": 0,
      "timelineId": "timeline_1",
      "type": "timelineSlot",
    },
  ],
  "timelines": Array [
    Object {
      "clips": Array [
        Object {
          "clipId": "clip_0",
          "end": 4,
          "start": 0,
        },
      ],
      "duration": 4,
      "id": "timeline_0",
      "name": "Timeline Name",
    },
    Object {
      "clips": Array [
        Object {
          "clipId": "clip_1",
          "end": 4,
          "start": 0,
        },
      ],
      "duration": 4,
      "id": "timeline_1",
      "name": "Timeline Name",
    },
  ],
}
`;
